crates/quarto-math/tests/integration/snapshots/integration__normalize__ast__text-and-styles__old-style-bf.snap
---
source: crates/quarto-math/tests/integration/normalize.rs
expression: rendered(&n)
---
row @0..9
  row @0..7
    style Bold @1..6
      row @4..6
        run "x" @5..6
  run "y" @8..9
-- problems --
