crates/quarto-math/tests/integration/snapshots/integration__normalize__ast__text-and-styles__old-style-rm-it.snap
---
source: crates/quarto-math/tests/integration/normalize.rs
expression: rendered(&n)
---
row @0..14
  row @0..7
    style Roman @1..6
      row @4..6
        run "d" @5..6
  row @7..14
    style Italic @8..13
      row @11..13
        run "x" @12..13
-- problems --
