crates/quarto-math/tests/integration/snapshots/integration__normalize__ast__text-and-styles__text-nested-math.snap
---
source: crates/quarto-math/tests/integration/normalize.rs
expression: rendered(&n)
---
row @0..22
  text Roman "if $x > 0$ then" @0..22
-- problems --
