crates/quarto-math/tests/integration/snapshots/integration__normalize__ast__text-and-styles__text-special-chars.snap
---
source: crates/quarto-math/tests/integration/normalize.rs
expression: rendered(&n)
---
row @0..18
  text Roman "50\\% of \\$x" @0..18
-- problems --
