crates/quarto-math/tests/integration/snapshots/integration__normalize__ast__text-and-styles__text-with-spaces.snap
---
source: crates/quarto-math/tests/integration/normalize.rs
expression: rendered(&n)
---
row @0..26
  text Roman "the quick brown fox" @0..26
-- problems --
