crates/quarto-math/tests/integration/snapshots/integration__normalize__ast__text-and-styles__textbf-textit.snap
---
source: crates/quarto-math/tests/integration/normalize.rs
expression: rendered(&n)
---
row @0..25
  text Bold "bold" @0..13
  text Italic "it" @14..25
-- problems --
