crates/quarto-math/tests/integration/snapshots/integration__normalize__ast__text-and-styles__textcolor.snap
---
source: crates/quarto-math/tests/integration/normalize.rs
expression: rendered(&n)
---
row @0..18
  color "red" @0..18
    row @15..18
      run "x" @16..17
-- problems --
